--- a/register.html
+++ b/register.html
@@ -8,8 +8,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
 body { font-family:'Noto Sans TC',sans-serif; background: linear-gradient(135deg,#E6E6FA,#FFFFFF); margin:0; padding:0; color:#000; overflow-x:hidden; position:relative; }
+.bubble { position:absolute; border-radius:50%; opacity:0.5; pointer-events:none; z-index:0; }
 
-.navbar { background-color: #4B0082 !important; background: rgba(10,10,10,0.85); backdrop-filter: blur(10px); border-bottom:1px solid rgba(255,255,255,0.1); }
+.navbar { background-color: #4B0082 !important;background: rgba(10,10,10,0.85); backdrop-filter: blur(10px); border-bottom:1px solid rgba(255,255,255,0.1); }
 .navbar-brand, .nav-link { color:#FFFFFF !important; font-weight:700; }
 .nav-link:hover, .nav-link.active { color:#FFD700 !important; }
 
@@ -17,59 +18,28 @@ h2 { color:#4B0082; font-weight:600; text-shadow:1px 1px 3px rgba(0,0,0,0.2); }
 
 .card { background: rgba(255,255,255,0.9); border-radius:15px; padding:25px; box-shadow:0 10px 25px rgba(0,0,0,0.3); margin-bottom:40px; position:relative; z-index:1; }
 
+.filter-input { width: 100%; font-size: 0.85rem; padding: 3px; border: 1px solid #ccc; border-radius: 5px; text-align: center; }
+
 #stats { font-size:1rem; font-weight:600; margin-bottom:15px; text-align:center; color:#4B0082; }
+
 #filteredCount { font-size:0.95rem; font-weight:500; margin-bottom:10px; text-align:center; color:#4B0082; }
 
-.table-responsive { overflow-x:auto; max-height:500px; position:relative; }
-#checkinTable { border-collapse: separate; border-spacing:0; min-width:100%; table-layout:auto; }
+.table-responsive { max-height: 500px; overflow-y: auto; position: relative; }
+.table-responsive table { width: max-content; min-width: 100%; table-layout: auto; }
 
-#checkinTable th, #checkinTable td { white-space:nowrap; vertical-align:middle; text-align:center; }
+#checkinTable thead th { position: sticky; top: 0; z-index: 2; background-color: #4B0082 !important; color: #fff !important; }
 
-/* 固定表頭 */
-#checkinTable thead th {
-  position: sticky;
-  top:0;
-  background-color:#4B0082;
-  color:#fff;
-  z-index:10;
-}
-
-/* 固定序號與姓名欄 */
-#checkinTable th:first-child,
-#checkinTable td:first-child {
-  position: sticky;
-  left:0;
-  background-color:#fff;
-  color:#000;
-  z-index:9;
-  border-right:1px solid rgba(0,0,0,0.2);
-}
-
-#checkinTable th:nth-child(2),
-#checkinTable td:nth-child(2) {
-  position: sticky;
-  left:60px; /* 與序號欄寬度一致 */
-  background-color:#fff;
-  color:#000;
-  z-index:8;
-  border-right:1px solid rgba(0,0,0,0.2);
-}
-
-/* 行背景 */
 #checkinTable tbody tr:nth-child(even) { background-color: #F3E8FF; }
 #checkinTable tbody tr:nth-child(odd) { background-color: #FFFFFF; }
 
 #checkinTable th:first-child,
-#checkinTable td:first-child,
-#checkinTable th:nth-child(2),
-#checkinTable td:nth-child(2) {
-  vertical-align: middle;
-}
+#checkinTable td:first-child { vertical-align: middle !important; text-align: center !important; white-space: nowrap; width: 60px; }
 
 footer { text-align:center; color:#555; background: rgba(255,255,255,0.1); padding:15px; font-size:0.95rem; margin-top:60px; }
 
 @media (max-width: 768px) {
-  .filter-input { font-size:0.75rem; }
+  .table-responsive { overflow-x: auto; }
+  .filter-input { font-size: 0.75rem; }
 }
 </style>
 </head>
@@ -87,46 +57,46 @@ footer { text-align:center; color:#555; background: rgba(255,255,255,0.1); paddi
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
          <li class="nav-item"><a class="nav-link active" href="index.html">回首頁</a></li>
-         <li class="nav-item"><a class="nav-link" href="agenda.html">活動流程</a></li>
-         <li class="nav-item"><a class="nav-link" href="register.html">報名名單</a></li>
-         <li class="nav-item"><a class="nav-link nav-link-arrow" href="checkin-終版-F.html">簽到入場</a></li>
-         <li class="nav-item"><a class="nav-link" href="honors.html">優良暨傑出教師芳名錄</a></li>
-         <li class="nav-item"><a class="nav-link" href="https://forms.gle/DBdC3ZScynWDzEps5" target="_blank">滿意度回饋</a></li>
+            <li class="nav-item"><a class="nav-link" href="agenda.html">活動流程</a></li>
+            <li class="nav-item"><a class="nav-link" href="register.html">報名名單</a></li>
+            <li class="nav-item"><a class="nav-link nav-link-arrow" href="checkin-終版-F.html">簽到入場</a></li>
+            <li class="nav-item"><a class="nav-link" href="honors.html">優良暨傑出教師芳名錄</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://forms.gle/DBdC3ZScynWDzEps5" target="_blank">滿意度回饋</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
 <main class="container" style="padding-top:100px;">
-  <div class="text-center mb-2">
-    <h2>✅ 已報名與會人員</h2>
-    <div class="d-flex justify-content-center align-items-center gap-2 mb-3">
-      <input id="globalSearch" type="text" class="form-control w-50" placeholder="🔍 全欄搜尋（姓名、科別、單位、備註）">
-      <button class="refresh-btn" onclick="filterTable()">🔍 搜尋</button>
-    </div>
+<div class="text-center mb-2">
+  <h2>✅ 已報名與會人員</h2>
+  <div class="d-flex justify-content-center align-items-center gap-2 mb-3">
+    <input id="globalSearch" type="text" class="form-control w-50" placeholder="🔍 全欄搜尋（姓名、科別、單位、備註）">
+    <button class="refresh-btn" onclick="filterTable()">🔍 搜尋</button>
   </div>
+</div>
 
-  <div id="stats"></div>
-  <div id="filteredCount"></div>
+<div id="stats"></div>
+<div id="filteredCount"></div>
 
-  <div class="card">
-    <div class="table-responsive">
-      <table class="table align-middle text-center" id="checkinTable">
-        <thead class="table-dark">
-          <tr>
-            <th>序號</th>
-            <th>姓名</th>
-            <th>單位<br><input type="text" class="filter-input" placeholder="篩選" onkeyup="columnFilter(2,this.value)"></th>
-            <th>職稱<br><input type="text" class="filter-input" placeholder="篩選" onkeyup="columnFilter(3,this.value)"></th>
-            <th>備註<br><input type="text" class="filter-input" placeholder="篩選" onkeyup="columnFilter(4,this.value)"></th>
-          </tr>
-        </thead>
-        <tbody id="tableBody">
-          <tr><td colspan="5" class="text-center text-muted">資料載入中...</td></tr>
-        </tbody>
-      </table>
-    </div>
+<div class="card">
+  <div class="table-responsive">
+    <table class="table align-middle text-center" id="checkinTable">
+      <thead class="table-dark">
+        <tr>
+          <th>序號</th>
+          <th>姓名</th>
+          <th>單位<br><input type="text" class="filter-input" placeholder="篩選" onkeyup="columnFilter(2,this.value)"></th>
+          <th>職稱<br><input type="text" class="filter-input" placeholder="篩選" onkeyup="columnFilter(3,this.value)"></th>
+          <th>備註<br><input type="text" class="filter-input" placeholder="篩選" onkeyup="columnFilter(4,this.value)"></th>
+        </tr>
+      </thead>
+      <tbody id="tableBody">
+        <tr><td colspan="5" class="text-center text-muted">資料載入中...</td></tr>
+      </tbody>
+    </table>
   </div>
+</div>
 </main>
 
 <footer>
