--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ body {
             <li class="nav-item"><a class="nav-link" href="register.html">報名名單</a></li>
 
             <li class="nav-item">
-                <a class="nav-link nav-link-arrow" href="checkin-終版-F-複製.html">簽到入場</a>
+                <a class="nav-link nav-link-arrow" href="checkin-終版-F-複製-test.html">簽到入場</a>
             </li>
 
             <li class="nav-item"><a class="nav-link" href="honors.html">優良暨傑出教師芳名錄</a></li>
@@ -254,6 +254,7 @@ navLinks.forEach(link=>{
 
 </body>
 </html>
+
 
 
 
