--- a/checkin-終版-F-複製-test.html
+++ b/checkin-終版-F-複製-test.html
@@ -12,7 +12,7 @@ body { font-family:'Noto Sans TC',sans-serif; background: linear-gradient(135deg
 
 .navbar { background-color: #4B0082 !important;background: rgba(10,10,10,0.85); backdrop-filter: blur(10px); border-bottom:1px solid rgba(255,255,255,0.1); }
 .navbar-brand, .nav-link { color:#FFFFFF !important; font-weight:700; }
-.nav-link:hover, .nav-link.active { color:#87CEFA !important; }
+.nav-link:hover, .nav-link.active { color:#FFD700 !important; }
 
 h2 { color:#4B0082; font-weight:600; text-shadow:1px 1px 3px rgba(0,0,0,0.2); }
 
@@ -330,3 +330,4 @@ fetchCheckinData();
 
 </body>
 </html>
+
