--- a/checkin-終版-F-複製-test.html
+++ b/checkin-終版-F-複製-test.html
@@ -97,9 +97,10 @@ footer { text-align:center; color:#555; background: rgba(255,255,255,0.1); paddi
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" href="index.html">首頁</a></li>
         <li class="nav-item"><a class="nav-link" href="schedule.html">活動流程</a></li>
-        <li class="nav-item"><a class="nav-link" href="teachers.html">教師芳名錄</a></li>
-        <li class="nav-item"><a class="nav-link active" href="checkin.html">報到系統</a></li>
-        <li class="nav-item"><a class="nav-link" href="survey.html">滿意度調查</a></li>
+      <li class="nav-item"><a class="nav-link" href="register.html">報名名單</a></li>
+            <li class="nav-item"><a class="nav-link nav-link-arrow" href="checkin-終版-F-複製-test.html">簽到入場</a></li>
+            <li class="nav-item"><a class="nav-link" href="honors.html">優良暨傑出教師芳名錄</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://forms.gle/DBdC3ZScynWDzEps5" target="_blank">滿意度回饋</a></li>
       </ul>
     </div>
   </div>
@@ -330,4 +331,5 @@ fetchCheckinData();
 
 </body>
 </html>
+
 
