--- a/register.html
+++ b/register.html
@@ -97,7 +97,7 @@ footer { text-align:center; color:#555; background: rgba(255,255,255,0.1); paddi
          <li class="nav-item"><a class="nav-link active" href="index.html">回首頁</a></li>
             <li class="nav-item"><a class="nav-link" href="agenda.html">活動流程</a></li>
             <li class="nav-item"><a class="nav-link" href="register.html">報名名單</a></li>
-            <li class="nav-item"><a class="nav-link nav-link-arrow" href="checkin.html">簽到入場</a></li>
+            <li class="nav-item"><a class="nav-link nav-link-arrow" href="checkin-終版-F-複製-test.html">簽到入場</a></li>
             <li class="nav-item"><a class="nav-link" href="honors.html">優良暨傑出教師芳名錄</a></li>
             <li class="nav-item"><a class="nav-link" href="https://forms.gle/DBdC3ZScynWDzEps5" target="_blank">滿意度回饋</a></li>
       </ul>
@@ -221,3 +221,4 @@ fetchCheckinData();
 </script>
 </body>
 </html>
+
